--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,11 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present          
+          npm run test --if-present 
+      - name: Synopsys Detect
+      - uses: blackducksoftware/github-action@2.0.0
+        with:
+           args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_API_TOKEN}}" --detect.risk.report.pdf=true'         
       - name: run cf
         run:  |           
           cf install-plugin -r CF-Community "cfdev" -f
