--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           npm run build --if-present
           npm run test --if-present 
       - name: Synopsys Detect
-      - uses: blackducksoftware/github-action@2.0.0
+        uses: blackducksoftware/github-action@2.0.0
         with:
            args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_API_TOKEN}}" --detect.risk.report.pdf=true'         
       - name: run cf
