--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,26 +5,34 @@ on: [push]
 jobs:
   build:
     runs-on: windows-latest
-    steps:
+    
+    strategy:
+      matrix:
+        node-version: [8.x]
+    
+    steps:      
       # checkout the repos
-      - uses: actions/checkout@master
-      - name: test
-        run: |
-          pwd
-          ls
+      - uses: actions/checkout@v1
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}      
+      
       # install dependencies, build, and test
       - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present 
+          npm run test --if-present          
+      
       - name: Synopsys Detect
         uses: blackducksoftware/github-action@2.0.0
         with:
-            args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_API_TOKEN}}" --detect.risk.report.pdf=true --detect.report.timeout=600000'       
+            args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_API_TOKEN}}" --detect.risk.report.pdf=true --detect.report.timeout=600000'          
+      
+      # run cf push
       - name: run cf
         run:  |           
           cf install-plugin -r CF-Community "cfdev" -f
-          cf  login -u ${{ secrets.cf_username }} -p ${{ secrets.cf_password }} -a ${{ secrets.cf_url }} --skip-ssl-validation  -o Simran-trial -s development
-          cf push cf-app -b https://github.com/cloudfoundry/nodejs-buildpack
-          
+          cf login -u ${{ secrets.cf_username }} -p ${{ secrets.cf_password }} -a ${{ secrets.cf_url }} --skip-ssl-validation -o Simran-trial -s development 
+          cf push cf-new-app -b https://github.com/cloudfoundry/nodejs-buildpack
