--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,4 @@ jobs:
         run:  |           
           cf install-plugin -r CF-Community "cfdev" -f
           cf login -u ${{ secrets.cf_username }} -p ${{ secrets.cf_password }} -a ${{ secrets.cf_url }} --skip-ssl-validation -o Simran-trial -s development 
-          cf push cf-new-app -b https://github.com/cloudfoundry/nodejs-buildpack
+          cf push cf-new1-app -b https://github.com/cloudfoundry/nodejs-buildpack
