--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,17 @@ on: [push]
 
 jobs:
   build:
-    runs-on: windows-latest
-    
     strategy:
       matrix:
-        node-version: [8.x]
+        os: 
+          - macOS-latest
+          - ubuntu-latest
+          - windows-latest 
+        node-version: 
+          - 8
+          - 10
+          - 12
+    runs-on: ${{matrix.os}} 
     
     steps:      
       # checkout the repos
@@ -23,12 +29,7 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
-
-      - name: Synopsys Detect
-        uses: blackducksoftware/github-action@2.0.0
-        with:
-            args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_API_TOKEN}}" --detect.risk.report.pdf=true --detect.report.timeout=600000'                    
+          npm run test --if-present                   
       
       # run cf push
       - name: run cf
