--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Synopsys Detect
         uses: blackducksoftware/github-action@2.0.0
         with:
-            args: ‘--blackduck.url=“${{ secrets.blackduck_url}}” --blackduck.api.token=“${{ secrets.blackduck_api_token}}” --detect.risk.report.pdf=true --detect.report.timeout=600000’
+            args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_API_TOKEN}}" --detect.risk.report.pdf=true --detect.report.timeout=600000'
       
       # run cf push
       - name: run cf
