--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,12 @@ jobs:
       matrix:
         os: 
           - windows-latest 
+          - ubuntu-latest
+          - windows-latest 
         node-version: 
           - 8.x
+          - 10.x
+          - 12.x
     runs-on: ${{matrix.os}} 
     
     steps:      
