--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,8 @@ jobs:
       matrix:
         os: 
           - windows-latest 
-          - ubuntu-latest
-          - windows-latest 
         node-version: 
           - 8.x
-          - 10.x
-          - 12.x
     runs-on: ${{matrix.os}} 
     
     steps:      
@@ -31,10 +27,10 @@ jobs:
           npm run build --if-present
           npm run test --if-present      
           
-      #- name: Synopsys Detect
-      #  uses: blackducksoftware/github-action@2.0.0
-      #  with:
-      #      args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_API_TOKEN}}" --detect.risk.report.pdf=true --detect.report.timeout=600000'
+      - name: Synopsys Detect
+        uses: blackducksoftware/github-action@2.0.0
+        with:
+            args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_API_TOKEN}}" --detect.risk.report.pdf=true --detect.report.timeout=600000'
       
       # run cf push
       - name: run cf
