--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,13 @@ jobs:
           - 8.x
     runs-on: ${{matrix.os}} 
     
-    steps:    
+    steps:
+      - uses: actions/checkout@v1
+      - name: Get npm cache directory
+        id: npm-cache
+        run: |
+           echo "::set-output name=dir::$(npm config get cache)"    
+           
       - uses: actions/cache@v1
         with:
           path: ${{ steps.npm-cache.outputs.dir }}
@@ -20,7 +26,6 @@ jobs:
             ${{ runner.os }}-node-      
       
       # checkout the repos
-      - uses: actions/checkout@v1
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
