--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,11 @@ jobs:
            echo "::set-output name=dir::$(npm config get cache)"    
       
       - uses: actions/cache@v1
-        id: cache
         with:
-          path: path/to/dependencies
-          key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
+          path: ${{ steps.npm-cache.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
   
       - name: Install Dependencies
         if: steps.cache.outputs.cache-hit != 'true'
