--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,6 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
-  
-      - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: /install.sh
       
       # checkout the repos
       - name: Use Node.js ${{ matrix.node-version }}
@@ -42,10 +38,10 @@ jobs:
           npm run build --if-present
           npm run test --if-present      
           
-      - name: Synopsys Detect
-        uses: blackducksoftware/github-action@2.0.0
-        with:
-            args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_API_TOKEN}}" --detect.risk.report.pdf=true --detect.report.timeout=600000'
+      #- name: Synopsys Detect
+       # uses: blackducksoftware/github-action@2.0.0
+        #with:
+         #   args: '--blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_API_TOKEN}}" --detect.risk.report.pdf=true --detect.report.timeout=600000'
       
       # run cf push
       - name: run cf
