--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest] 
+        os: [windows-latest] 
         node-version: 
           - 8.x
     runs-on: ${{matrix.os}} 
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/cache@v1
         with:
           path: ${{ steps.npm-cache.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package.json') }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**\package.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
       
