--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,12 @@
-sonar.organization=${{ secrets.ORGANISATION_KEY }}
-sonar.projectKey=${{ secrets.PROJECT_KEY }}
+sonar.projectKey=manulife-ets_sample-app
+sonar.organization=manulife-ets
 
-# relative paths to source directories. More details and properties are described
-# in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/ 
-sonar.sources=.
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=sample-app
+#sonar.projectVersion=1.0
 
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
